# solar-magic

./: Cargo.toml
assets/MartianMono/: README.md
src/: addr.rs  addr_space.rs  analyzer.rs  cart.rs  crc32.rs  instruction.rs  lib.rs  original_cart.rs  rewriter.rs  tvl.rs
src/datatypes/: mod.rs  vecmap.rs
src/disasm/: mod.rs
ui/: Cargo.toml
ui/src/: addr_widget.rs  app.rs  cart_info.rs  data_block_view.rs  disassembly_view.rs  error.rs  fonts.rs  main.rs  overlay.rs  project.rs  shortcuts.rs  theme.rs
