[package]
name = "solar-magic-ui"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies.solar-magic]
path = ".."

[dependencies.eframe]
version = "0.31"
default-features = false
features = ["accesskit", "glow", "wgpu", "wayland"]

[dependencies.egui_extras]
version = "0.31"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.rfd]
version = "0.15"

[dependencies.nucleo-matcher]
version = "0.3"
